Github Workflow: Rerunning tests

--- a/mysite/.github/workflows/django-tests.yml
+++ b/mysite/.github/workflows/django-tests.yml
@@ -26,5 +26,5 @@ jobs:
 
       - name: Run Django tests
         run: |
-          cd Job_Tracker
+          cd mysite
           python manage.py test
